[package]
name = "ci-id"
version = "0.2.0"
edition = "2021"
authors = ["Jussi Kukkonen <jkukkonen@google.com>"]
description = "Ambient OIDC credentials detection on CI systems"
repository = "https://github.com/jku/ci-id"
license = "Apache-2.0"

[workspace]

members = [ "bin" ]

[dependencies]
log = "0.4"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
lazy_static = "1.5"
tempfile = "3.13"
