[package]
name = "ci-id"
version = "0.1.2"
edition = "2021"
authors = ["Jussi Kukkonen <jkukkonen@google.com>"]
description = "Ambient OIDC credentials detection on CI systems"
repository = "https://github.com/jku/ci-id"
license = "Apache-2.0"

[dependencies]
log = "0.4.22"
regex = "1.10.0"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.213", features = ["derive"] }

[dev-dependencies]
lazy_static = "1.5.0"
tempfile = "3.13.0"
